@@ -1,5 +1,5 @@
 #
-#  $Id: Makefile.skel,v 1.1 2008-01-02 10:56:41 debug Exp $
+#  $Id: Makefile.skel,v 1.2 2008-01-02 12:39:13 debug Exp $
 #
 #  Makefile for GXemul src/main/commands
 #
@@ -7,7 +7,7 @@
 CFLAGS=$(CWARNINGS) $(COPTIM) $(XINCLUDE) $(INCLUDE2)
 LIBS=$(XLIB) $(OTHERLIBS)
 
-OBJS=QuitCommand.o
+OBJS=QuitCommand.o VersionCommand.o
 
 all: $(OBJS)
 
